--- a/x10.man/paper/paper.tex
+++ b/x10.man/paper/paper.tex
@@ -41,24 +41,21 @@
 
 \begin{document}
 \title{Constrained Types for Object-Oriented Languages}
-\authorinfo{Vijay Saraswat}
-  {IBM T.~J. Watson Research Center \\
-   P.O. Box 704 \\
-   Yorktown Heights, NY 10598}
+\authorinfo{Vijay Saraswat\titlenote{IBM T.~J. Watson Research
+Center, P.O. Box 704, Yorktown Heights NY 10598 USA}}{}
   {vsaraswa@us.ibm.com}
-\authorinfo{Nathaniel Nystrom}
-  {IBM T.~J. Watson Research Center \\
-   P.O. Box 704 \\
-   Yorktown Heights, NY 10598}
+\authorinfo{Nathaniel Nystrom$^{\;*}$}{}
   {nystrom@us.ibm.com}
-\authorinfo{Radha Jagadeesan}
-  {Depaul University}
+\authorinfo{Radha Jagadeesan\titlenote{School of CTI, DePaul
+University, 243 S. Wabash Avenue, Chicago IL 60604 USA}}{}
   {rjagadeesan@cs.depaul.edu}
-\authorinfo{Jens Palsberg}
-  {University of California--Los Angeles}
+\authorinfo{Jens Palsberg\titlenote{UCLA Computer Science
+Department, Boelter Hall, Los Angeles CA 90095 USA}}{}
   {palsberg@cs.ucla.edu}
-\authorinfo{Christian Grothoff}
-  {University of Denver}
+\authorinfo{Christian Grothoff\titlenote{
+Department of Computer Science, University of Denver,
+2360 S. Gaylord Street, John
+Green Hall, Room 214, Denver CO, 80208 USA}}{}
   {christian@grothoff.org}
 
 \maketitle
@@ -76,15 +73,11 @@ languages, in the context of \FXten, a Featherweight version of \Xten{}.
 \label{sec:intro}
 \input{intro}
 
-\section{Related work}
-\label{sec:related}
-\input{related}
-
-\section{Constrained FJ}
+\section{Constrained Java}
 \label{sec:lang}
 \input{lang}
 
-\section{Semantics}
+\section{Constrained FJ}
 \label{sec:semantics}
 \input{semantics}
 
@@ -95,6 +88,10 @@ languages, in the context of \FXten, a Featherweight version of \Xten{}.
 \section{Implementation}
 \label{sec:implementation}
 \input{impl}
+
+\section{Related work}
+\label{sec:related}
+\input{related}
 
 \section{Future work}
 \label{sec:future}
