Moved related work to near the end of the paper.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4134 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/intro.tex
+++ b/trunk/x10.man/paper/intro.tex
@@ -33,7 +33,7 @@ all arrays of {\tt int} of length {\tt 5}, and {\tt int[region(2)]},
 the type of all {\tt int} arrays over two dimensional regions.
 The underlying
 general idea is that of {\em dependent types}: types
-parametrized by {\em values} \cite{xi99dependent}.
+parametrized by {\em values} \cite{dependent-types,xi99dependent}.
 
 XXX emph pluggable nature of the constraint system.
 
@@ -276,7 +276,6 @@ XXX contrast with hybrid type checking.
 
 \paragraph{Rest of this paper.}
 
-The next section reviews related work.
 Section~\ref{sec:lang} fleshes out the syntactic and semantic details of the
 proposal.
 Formal semantics
@@ -284,7 +283,8 @@ and a soundness theorem
 are presented in Section~\ref{sec:semantics}.
 Section~\ref{sec:examples} works through a number of
 examples using a variety of constraint systems.
-Sections~\ref{sec:future}
+Section~\ref{sec:related} reviews related work.
+Last, Sections~\ref{sec:future}
 and \ref{sec:conclusions} conclude the paper with a discussion of
 future work.
 
