Added a bunch of references.
git-svn-id: svn://svn.code.sf.net/p/x10/code@4135 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/master.bib
+++ b/trunk/x10.man/paper/master.bib
@@ -2339,6 +2339,13 @@ Pisa, August 1996"
   year = 2006
 }
 
+@inproceedings{flanagan-fool06,
+  author = "Cormac Flanagan and Stephen~N. Freund and Aaron Tomb",
+  title = "Hybrid types, invariants, and refinements for imperative objects",
+  booktitle = "International Workshop on Foundations of Object-Oriented Programming ({FOOL})",
+  year = 2006
+}
+
 
 @inproceedings{ sulzmann97type,
     author = "Martin Sulzmann and Martin Odersky and Martin Wehr",
@@ -2484,13 +2491,23 @@ year = 1993
 	Year = 2003}
 
 
+@inproceedings{xi98array,
+    author = "Hongwei Xi and Frank Pfenning",
+    title = {Eliminating Array Bound Checking through Dependent Types},
+    booktitle = "Proceedings of {ACM} {SIGPLAN} Conference on Programming Language Design and Implementation ({PLDI})",
+    year = 1998,
+    month = jun,
+    address = "Montreal, Canada",
+    pages = "249--257"
+}
+
 @inproceedings{xi99dependent,
-        Address = {San Antonio, TX},
-        Author = {Hongwei Xi and Frank Pfenning},
+        Address = "San Antonio, TX",
+        Author = "Hongwei Xi and Frank Pfenning",
         booktitle = "Proceedings of the 26th {A}nnual {ACM} Symposium on Principles of Programming Languages ({POPL}'99)",
         Month = Jan,
-        Pages = {214--227},
-        Title = {Dependent Types in Practical Programming},
+        Pages = "214--227",
+        Title = "Dependent Types in Practical Programming",
         Year = 1999}
 
 @inbook{pottier-remy-attapl,
@@ -2528,6 +2545,14 @@ year = 1993
   Year = 1995
 }
 
+@inproceedings{f-bounds,
+  author = "Peter Canning and WIlliam Cook and Walter Hill and Walter Olthoff and John~C. Mitchell",
+  title = "F-Bounded Polymorphism for Object-oriented programming",
+  booktitle = "Proceedings of the Fourth International Conference on Functional Programming Languages and Computer Architecture ({FPCA})",
+  pages = "273--280",
+  year = 1989
+}
+
 @book{nielson-multistage,
   author = "Flemming Nielson and Hanne Riis Nielson",
   title = "Two-level functional languages",
@@ -2546,7 +2571,7 @@ year = 1993
 }
 
 @misc{jsr308,
-	Title = {{JSR} 308: Annotations on {Java} Types},
+	Title = "{JSR} 308: Annotations on {Java} Types",
         Key = {JSR308},
 	Howpublished = {\texttt{http://jcp.org/en/jsr/detail?id=308}}}
 
@@ -2583,7 +2608,7 @@ year = 1993
   booktitle = popl05,
   year = 2005,
   month = jan,
-  location = {Long Beach, CA, USA}
+  location = "Long Beach, CA, USA"
 }
 
 @article{pugh00-memory-model,
@@ -2619,3 +2644,212 @@ year = 1993
   year = 1995
 }
 
+@InProceedings{bsg95,
+  author =       "Kim B. Bruce and Angela Schuett and Robert van Gent",
+  title =        "Poly{TOIL}: A type-safe polymorphic object-oriented language",
+  series =       lncs,
+  number =       952,
+  pages =        "27--51",
+  booktitle =    "{E}uropean {C}onference on {O}bject-{O}riented
+                 {P}rogramming ({ECOOP})",
+  publisher =    SV,
+  year =         1995
+}
+
+@inproceedings{ocrz-ecoop03,
+  author = "Martin Odersky and Vincent Cremet and Christine R{\"o}ckl and Matthias Zenger",
+  title = "A Nominal Theory of Objects with Dependent Types",
+  booktitle = "Proceedings of 17th {E}uropean Conference on Object-Oriented Programming ({ECOOP} 2003)",
+  series = lncs,
+  number = 2743,
+  publisher = SV,
+  city = "Darmstadt, Germany",
+  pages = "201--224",
+  month = jul,
+  year = 2003
+}
+
+@inproceedings{bfp-ecoop97-match,
+  author = "Kim B. Bruce and Adrian Fiech and Leaf Petersen",
+  title = "Subtyping is not a good ``Match'' for object-oriented languages",
+  booktitle = "Proceedings of 11th European Conference on Object-Oriented Programming (ECOOP'97)",
+  series = lncs,
+  number = 1241,
+  publisher = SV,
+  address = "Jyv{\"a}skyl{\"a}, Finland",
+  pages = "104--127",
+  month = jun,
+  year = 1997
+}
+
+@inproceedings{scala-overview,
+  title = "An Overview of the {S}cala Programming Language",
+  author = "Martin Odersky and Philippe Altherr and Vincent Cremet and Burak Emir and Sebastian Maneth and St{\'e}phane Micheloud and Nikolay Mihaylov and Michel Schinz and Erik Stenman and Matthias Zenger",
+  institution = "{\'E}cole Polytechnique F{\'e}d{\'e}rale de Lausanne",
+  note = 	 "{\tt{http://scala.epfl.ch/\allowbreak docu/\allowbreak files/\allowbreak ScalaOverview.pdf}}",
+  month = jun,
+  year = 2004
+}
+
+@inproceedings{scala-oopsla05,
+  title = "Scalable Component Abstractions",
+  author = "Martin Odersky and Matthias Zenger",
+  booktitle = OOPSLA05,
+  pages = "41--57",
+  address = "San Diego, CA, USA",
+  month = oct,
+  year = 2005
+}
+
+@PhdThesis{ernst99-gbeta,
+    author =     {Erik Ernst},
+    title =      "{gbeta}: A Language with Virtual Attributes, Block 
+                  Structure, and Propagating, Dynamic Inheritance", 
+    school =     {Department of Computer Science, University of Aarhus, 
+                  \AA{}rhus, Denmark},
+    year =       {1999},
+  }
+
+@inproceedings{cdnw07-tribe,
+ author = {Dave Clarke and Sophia Drossopoulou and James Noble and Tobias Wrigstad},
+ title = {Tribe: a simple virtual class calculus},
+ booktitle = {AOSD '07: Proceedings of the 6th international conference on Aspect-oriented software development},
+ year = {2007},
+ isbn = {1-59593-615-7},
+ pages = {121--134},
+ location = {Vancouver, British Columbia, Canada},
+ doi = {http://doi.acm.org/10.1145/1218563.1218578},
+ publisher = {ACM Press},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{nqm06,
+    title = "J\&: Nested Intersection for Scalable Software Extension",
+    author = "Nathaniel Nystrom and Xin Qi and Andrew C. Myers",
+    booktitle = "Proceedings of the 2006 ACM Conference on Object Oriented Programming Systems, Languages, and Applications (OOPSLA)",
+    address = "Portland, OR",
+    month = oct,
+    year = 2006,
+    pages = "21--36"
+}
+
+@inproceedings{omega,
+  author = "William Pugh",
+  title = "The Omega Test: A fast and practical integer programming algorithm for dependence analysis",
+  booktitle = "Supercomputing '91: Proceedings of the 1991 {ACM}/{IEEE} Conference on Supercomputing",
+  pages = "4--13",
+  year = 1991
+}
+
+@inbook{sor,
+  author = "W.~H. Press and B.~P. Flannery and S.~A. Teukolsky and W.~T. Vetterling",
+  title = "Successive overrelaxation ({SOR})",
+  booktitle = "Numerical Recipes in {FORTRAN}: The Art of Scientific Computing",
+  pages = "866-869",
+  publisher = "Cambridge University Press",
+  year = 1992
+}
+
+@phdthesis{indexed-types-thesis,
+  author = "Christoph Zenger",
+  title = "Indizierte {T}ypen",
+  school = "Universit{\"a}t Karlsruhe",
+  year = 1998
+}
+
+@article{indexed-types,
+  author = "Christoph Zenger",
+  title = "Indexed types",
+  journal = "Theoretical Computer Science",
+  volume = 187,
+  number = "1--2",
+  pages = "147--165",
+  month = nov,
+  year = 1997
+}
+
+@inproceedings{aspinall-singletons,
+ author = "David Aspinall",
+ title = "Subtyping with Singleton Types",
+ booktitle = "{CSL} '94: Selected Papers from the 8th International Workshop on Computer Science Logic",
+ year = 1995,
+ pages = "1--15",
+ series = "LNCS",
+ number = 933,
+ publisher = "Springer-Verlag",
+ address = "London, UK"
+}
+
+@phdthesis{stone00,
+  author = "Christopher A. Stone",
+  title = "Singleton Types and Singleton Kinds",
+  school = "Carnegie--Mellon University",
+  year = 2000,
+  month = aug,
+  note = "Also availalble as {CMU} technical report {CMU-CS-00-153}"
+}
+
+
+@inproceedings{conditional-types,
+  author = "Alexander Aiken and Edward L. Wimmers and T.~K. Lakshman",
+  title = "Soft Typing with Conditional Types",
+  booktitle = "Proceedings of the 21st Annual {ACM} {SIGPLAN}--{SIGACT}
+Symposium on Principles of Programming Languages ({POPL})",
+  pages = "163--173",
+  month = jan,
+  year = 1994
+}
+
+@inproceedings{cardelli86,
+  author = "Luca Cardelli",
+  title = "Typechecking dependent types and subtypes",
+  series = {LNCS},
+  number = 306,
+  booktitle = "Foundations of logic and functional programming",
+  location = "Trento, Italy",
+  pages = "45--57",
+  month = dec,
+  year = 1986
+}
+
+@inproceedings{cayenne,
+  author = "Lennart Augustsson",
+  title = "Cayenne: a Language with Dependent Types",
+  booktitle = "Proceedings of the {ACM} {SIGPLAN} International Conference on Functional Programming ({ICFP} '98)",
+  location = "Baltimore, MD",
+  pages = "239--250",
+  year = 1998
+}
+
+@inproceedings{refinement-types,
+  author = "Tim Freeman and Frank Pfenning",
+  title = "Refinement types for {ML}",
+  booktitle = "Proceedings of the {ACM} {SIGPLAN} Conference on Programming Language Design and Implementation ({PLDI})",
+  location = "Toronto, ON, Canada",
+  pages = "268--277",
+  month = jun,
+  year = 1991
+}
+
+@article{epigram,
+  author = "Conor McBride and James McKinna",
+  title = "The view from the left",
+  journal = "Journal of Functional Programming",
+  volume = 14,
+  number = 1,
+  pages = "69--111",
+  year = 2004
+}
+
+@article{dependent-types,
+  author = "Per Martin-L{\"o}f",
+  title = "A Theory of Types",
+  year = 1971
+}
+
+@book{ml84,
+  author = "Per Martin-L{\"o}f",
+  title = "Intuitionistic Type Theory",
+  publisher = "Bibliopolis-Napoli",
+  year = 1984
+}
