--- a/x10.man/paper/defs.sty
+++ b/x10.man/paper/defs.sty
@@ -76,3 +76,21 @@
 \newcommand\eat[1]{}
 
 \renewcommand\bar[1]{\overline{#1}}
+
+\newcommand{\starderives}{\derives^*}
+\def\from#1\infer#2{{{\textstyle #1}\over{\textstyle #2}}}
+\def\axname#1\axiom#2{{\textstyle #2}{\ \textstyle(\mbox{#1)}}}
+\def\rname#1\from#2\infer#3{{{\textstyle #2}\over{\textstyle #3}}{\ \textstyle(\mbox{#1)}}}
+\def\derives{\longrightarrow}
+\def\subtype{\sqsubseteq}
+
+\def\super{\mbox{\tt super}}
+\def\class{\mbox{\tt class}}
+\def\extends{\mbox{\tt extends}}
+\def\return{\mbox{\tt return}}
+\def\new{\mbox{\tt new}}
+\def\this{\mbox{\tt this}}
+\def\self{\mbox{\tt self}}
+\def\true{\mbox{\tt true}}
+\def\inv{\mbox{\em inv}}
+
