--- a/x10.man/paper/paper.tex
+++ b/x10.man/paper/paper.tex
@@ -6,7 +6,6 @@
 \usepackage{stmaryrd}
 \usepackage{code}
 %\usepackage{ttquot}
-\usepackage{bcprules}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{afterpage}
@@ -38,6 +37,8 @@
 \newcommand\Java{{\java}}
 \newcommand\csharp{{C$\sharp$}}
 \newcommand\FXten{{FX10}}
+\newcommand\FJ{{FJ}}
+\newcommand\CFJ{{CFJ}}
 
 \begin{document}
 \title{Constrained Types for Object-Oriented Languages}
@@ -65,8 +66,41 @@ Green Hall, Room 214, Denver CO, 80208 USA}}{}
 % \copyrightdata{[to be supplied]}
 
 \begin{abstract}
-We formalize the basic ideas of dependent-types for Java-like
-languages, in the context of \FXten, a Featherweight version of \Xten{}.
+\Xten{} is a modern object-oriented language designed for
+productivity and performance in concurrent and distributed
+systems, such as (heterogenous) multicores and clusters. In this
+context, (value-)dependent types arise naturally: objects may be
+located at one of many places, arrays may be multidimensional,
+activities may be associated with one or more clocks, variables
+may be marked as shared or private following an ownership
+discipline, etc.  A framework for mostly statically checked
+dependent types offers significant opportunities for detecting
+design errors statically, documenting design decisions,
+eliminating costly runtime checks (e.g., array bounds, null
+checks), and improving the quality of code.
+
+We present a simple, general framework for adding
+constraint-based dependent types to nominally typed OO languages
+such as Java, \Xten{} and Scala. The framework is parametric on
+an underlying constraint system {\cal C}. In this system,
+classes and interfaces are associated with {\em properties},
+i.e., final instance fields. A type {\tt C(:c)} names a class or
+interface {\tt C} and a {\em constraint clause} {\tt c} on
+properties of {\tt C} and final variables in scope at the type.
+Constraint clauses may also be associated with classes
+(representing class invariants) and with parameter-lists for
+methods and constructors (representing preconditions).
+
+We present many examples to illustrate that common OO idioms can
+be accurately captured by constrained types, e.g., place types,
+ownership types, array types, clocked types. We have implemented
+a version the type system (for a simple equality-based
+constraint system) in \Xten{} 1.0 (available at {\tt
+x10.sf.net}). We present a simple \FJ{} extension, {\tt
+Constrained FJ} and establish fundamental properties such as
+type soundess. We compare this approach with relevant work in
+dependent types, specifically, DML, and outline many areas of
+future work.
 \end{abstract}
 
 \section{Introduction}
