--- a/x10.man/paper/pldefs.sty
+++ b/x10.man/paper/pldefs.sty
@@ -47,7 +47,7 @@
 \newcommand\dq[1]{\mbox{``}#1\mbox{''}}
 \newcommand\sidecond[1]{\qquad\mbox{(#1)}}
 \newcommand\lift[1]{\ensuremath{\lfloor #1 \rfloor}}
-\newcommand{\rname}[1]{\mbox{\textsc{#1}}}
+%\newcommand{\rname}[1]{\mbox{\textsc{#1}}}
 
 \newcommand\defines{\triangleq}
 %\newcommand\defines{=}
