Remove duplicate def
git-svn-id: svn://svn.code.sf.net/p/x10/code@4141 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.man/paper/pldefs.sty
+++ b/trunk/x10.man/paper/pldefs.sty
@@ -47,7 +47,7 @@
 \newcommand\dq[1]{\mbox{``}#1\mbox{''}}
 \newcommand\sidecond[1]{\qquad\mbox{(#1)}}
 \newcommand\lift[1]{\ensuremath{\lfloor #1 \rfloor}}
-\newcommand{\rname}[1]{\mbox{\textsc{#1}}}
+%\newcommand{\rname}[1]{\mbox{\textsc{#1}}}
 
 \newcommand\defines{\triangleq}
 %\newcommand\defines{=}
